# ogre-sample

./: CMakeLists.txt  main.cpp
